# proyectPlus

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  resize_icon.py  vite.config.ts
docs/: README.md
docs/prd/: mvp-ms-control-center.md
scripts/: tauri-dev.mjs
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  cargo_errors.txt  cargo_errors_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-desktop.toml
src-tauri/permissions/autogenerated/: cancel_k6_run.toml  check_port_in_use.toml  clear_service_logs.toml  create_microservice.toml  delete_microservice.toml  delete_project.toml  export_service_logs.toml  fetch_service_topology_endpoint.toml  get_catalog_snapshot.toml  get_k6_lab_snapshot.toml  get_k6_run_snapshot.toml  get_project_topology.toml  get_service_execution_history.toml  get_service_logs.toml  kill_process_on_port.toml  open_service_folder.toml  open_service_terminal.toml  pick_app_settings_path.toml  read_service_topology_manifest.toml  register_k6_script.toml  register_manual_service.toml  rescan_active_workspace.toml  run_service.toml  save_k6_lab_preferences.toml  save_project_topology.toml  select_directory.toml  select_project.toml  select_workspace_root.toml  start_k6_run.toml  update_microservice.toml  update_service_order.toml  validate_k6_setup.toml
src-tauri/sql/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/storage/: actions.rs  db.rs  events.rs  metrics.rs  mod.rs  runtime.rs
(+41 files in other folders)
