[package]
name = "ms-control-center"
version = "0.1.0"
description = "Desktop shell for local microservice orchestration."
authors = ["proyectsplus"]
edition = "2021"

[lib]
name = "ms_control_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2.5"
